--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #141414;
       background-image:
         linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-        url('tf2-trading-background.png');
+        url('tf2-background.png');
       background-blend-mode: overlay;
       background-repeat: no-repeat;
       background-size: cover;
