--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #141414;
       background-image:
         linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-        url('tf2-background.png');
+        url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
       background-blend-mode: overlay;
       background-repeat: no-repeat;
       background-size: cover;
@@ -154,15 +154,9 @@
     }
 
     @keyframes float {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0);
-      }
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
     }
 
     @media screen and (max-width: 600px) {
