--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #141414;
-      background-image:
-        linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
-      background-blend-mode: overlay;
+      background-image: url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -28,7 +25,7 @@
     }
 
     header {
-      background-color: #1e1e1e;
+      background-color: rgba(30, 30, 30, 0.85);
       padding: 30px 20px;
       text-align: center;
     }
@@ -43,7 +40,7 @@
     }
 
     nav {
-      background: #222;
+      background: rgba(34, 34, 34, 0.85);
       text-align: center;
       padding: 10px;
     }
@@ -56,7 +53,7 @@
     }
 
     .hero {
-      background: linear-gradient(#111, #1e1e1e);
+      background-color: rgba(17, 17, 17, 0.85);
       padding: 40px 20px;
       text-align: center;
     }
@@ -81,7 +78,7 @@
     }
 
     .box {
-      background: #1f1f1f;
+      background: rgba(31, 31, 31, 0.85);
       border: 1px solid #333;
       border-radius: 10px;
       padding: 20px;
@@ -125,7 +122,7 @@
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #111;
+      background-color: rgba(17, 17, 17, 0.85);
       font-size: 14px;
       color: #777;
     }
@@ -154,15 +151,9 @@
     }
 
     @keyframes float {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0);
-      }
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
     }
 
     @media screen and (max-width: 600px) {
