--- a/commands.html
+++ b/commands.html
@@ -4,50 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Commands - MannCo Vault</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #141414;
-      color: #f0f0f0;
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Bebas Neue', sans-serif;
+      background-color: #2c2c2c;
+      background-image: url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: #fff;
     }
+
     header {
-      background-color: #1e1e1e;
+      background-color: rgba(66, 28, 28, 0.95);
+      padding: 30px 20px;
       text-align: center;
-      padding: 30px;
+      border-bottom: 4px solid #d99c27;
     }
+
     header h1 {
+      font-size: 42px;
+      margin: 0;
       color: #f0c040;
+      text-shadow: 2px 2px #000;
     }
+
+    header p {
+      font-size: 18px;
+      color: #ddd;
+    }
+
     .container {
-      max-width: 800px;
-      margin: 20px auto;
+      max-width: 900px;
+      margin: 40px auto;
       padding: 20px;
+      background: rgba(20, 20, 20, 0.85);
+      border-radius: 10px;
+      border: 2px solid #d99c27;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
+
     ul {
       list-style: none;
       padding-left: 0;
     }
+
     li {
-      background-color: #222;
+      background-color: rgba(34, 17, 17, 0.9);
       border: 1px solid #333;
-      margin-bottom: 10px;
-      padding: 15px;
+      margin-bottom: 12px;
+      padding: 15px 20px;
       border-radius: 8px;
+      font-size: 18px;
+      color: #f0f0f0;
+      text-shadow: 1px 1px #000;
     }
+
     code {
-      background: #333;
-      padding: 3px 6px;
+      background: #f0c040;
+      color: #222;
+      padding: 4px 8px;
       border-radius: 4px;
-      font-size: 16px;
+      font-family: monospace;
+      font-size: 17px;
+      font-weight: bold;
     }
+
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #111;
+      background-color: rgba(34, 17, 17, 0.95);
       font-size: 14px;
-      color: #777;
+      color: #aaa;
+      border-top: 4px solid #d99c27;
+    }
+
+    @media screen and (max-width: 600px) {
+      header h1 {
+        font-size: 32px;
+      }
+
+      li {
+        font-size: 16px;
+        padding: 12px 15px;
+      }
+
+      code {
+        font-size: 16px;
+      }
+
+      .container {
+        margin: 20px 10px;
+      }
     }
   </style>
 </head>
@@ -56,6 +107,7 @@
     <h1>📜 Bot Commands</h1>
     <p>Type these in chat to interact with the MannCo Vault Bot</p>
   </header>
+
   <div class="container">
     <ul>
       <li><code>!help</code> — Show the list of available commands.</li>
@@ -66,8 +118,9 @@
       <li><code>!support</code> — Contact the bot owner if you need help.</li>
     </ul>
   </div>
+
   <footer>
-    &copy; 2025 MannCo Vault — Commands for bot interaction.
+    &copy; 2025 MannCo Vault — Not affiliated with Valve or Steam. Visit <a style="color: #f0c040;" href="index.html">Home</a>
   </footer>
 </body>
 </html>
