--- a/faq.html
+++ b/faq.html
@@ -4,47 +4,104 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ - MannCo Vault</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #141414;
-      color: #f0f0f0;
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Bebas Neue', sans-serif;
+      background-color: #2c2c2c;
+      background-image: url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: #fff;
     }
+
     header {
-      background-color: #1e1e1e;
+      background-color: rgba(66, 28, 28, 0.95);
+      padding: 30px 20px;
       text-align: center;
-      padding: 30px;
+      border-bottom: 4px solid #d99c27;
     }
+
     header h1 {
+      font-size: 42px;
+      margin: 0;
       color: #f0c040;
+      text-shadow: 2px 2px #000;
     }
+
+    header p {
+      font-size: 18px;
+      color: #ddd;
+    }
+
     .container {
       max-width: 900px;
-      margin: 20px auto;
+      margin: 40px auto;
       padding: 20px;
+      background: rgba(20, 20, 20, 0.85);
+      border-radius: 10px;
+      border: 2px solid #d99c27;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
+
     .faq {
-      background: #222;
+      background: rgba(34, 17, 17, 0.9);
       border: 1px solid #333;
       border-radius: 8px;
       padding: 15px 20px;
       margin-bottom: 15px;
     }
+
     .faq h3 {
       color: #f0c040;
+      font-size: 20px;
     }
+
     .faq p {
-      font-size: 15px;
+      font-size: 17px;
+      color: #ccc;
       line-height: 1.6;
+      text-shadow: 1px 1px #000;
     }
+
+    a {
+      color: #f0c040;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #111;
+      background-color: rgba(34, 17, 17, 0.95);
       font-size: 14px;
-      color: #777;
+      color: #aaa;
+      border-top: 4px solid #d99c27;
+    }
+
+    @media screen and (max-width: 600px) {
+      header h1 {
+        font-size: 32px;
+      }
+
+      .container {
+        margin: 20px 10px;
+        padding: 15px;
+      }
+
+      .faq h3 {
+        font-size: 18px;
+      }
+
+      .faq p {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
@@ -53,6 +110,7 @@
     <h1>❓ Frequently Asked Questions</h1>
     <p>Everything you need to know about selling TF2 keys</p>
   </header>
+
   <div class="container">
     <div class="faq">
       <h3>🕒 How fast will I receive my payment?</h3>
@@ -68,13 +126,14 @@
     </div>
     <div class="faq">
       <h3>📉 Are prices always the same?</h3>
-      <p>Prices can change depending on market trends. Check the <a href="pricing.html" style="color:#f0c040;">Pricing</a> page for current rates.</p>
+      <p>Prices can change depending on market trends. Check the <a href="pricing.html">Pricing</a> page for current rates.</p>
     </div>
     <div class="faq">
       <h3>📬 Who do I contact if I have an issue?</h3>
-      <p>Visit our <a href="support.html" style="color:#f0c040;">Support</a> page for help or to contact the owner directly.</p>
+      <p>Visit our <a href="support.html">Support</a> page for help or to contact the owner directly.</p>
     </div>
   </div>
+
   <footer>
     &copy; 2025 MannCo Vault — Making TF2 key trading safe and simple.
   </footer>
