--- a/support.html
+++ b/support.html
@@ -4,56 +4,113 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Support - MannCo Vault</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="icon" href="favicon.ico" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #141414;
+      font-family: 'Bebas Neue', sans-serif;
+      background-color: #2c2c2c;
+      background-image: url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       color: #fff;
       margin: 0;
       padding: 0;
     }
+
     header {
-      background-color: #1e1e1e;
+      background-color: rgba(66, 28, 28, 0.95);
       text-align: center;
       padding: 30px 20px;
+      border-bottom: 4px solid #d99c27;
     }
+
     header h1 {
-      font-size: 32px;
+      font-size: 42px;
+      margin: 0;
       color: #f0c040;
+      text-shadow: 2px 2px #000;
     }
+
+    header p {
+      font-size: 18px;
+      color: #ddd;
+    }
+
     .content {
-      padding: 30px 20px;
-      max-width: 800px;
-      margin: 0 auto;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: rgba(20, 20, 20, 0.85);
+      border-radius: 10px;
+      border: 2px solid #d99c27;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
+
     .content h2 {
       color: #f0c040;
+      font-size: 26px;
     }
-    .content p, .content li {
+
+    .content p,
+    .content li {
       color: #ccc;
-      font-size: 16px;
+      font-size: 18px;
+      line-height: 1.6;
+      text-shadow: 1px 1px #000;
     }
+
+    ul {
+      padding-left: 20px;
+    }
+
     .contact-box {
-      background-color: #1f1f1f;
+      background-color: rgba(34, 17, 17, 0.9);
       padding: 20px;
       border-radius: 10px;
       border: 1px solid #333;
-      margin-top: 20px;
+      margin-top: 30px;
     }
+
     .contact-box h3 {
       color: #f0c040;
+      font-size: 22px;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #111;
-      font-size: 14px;
-      color: #777;
-    }
+
     a {
       color: #f0c040;
       text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: rgba(34, 17, 17, 0.95);
+      font-size: 14px;
+      color: #aaa;
+      border-top: 4px solid #d99c27;
+    }
+
+    @media screen and (max-width: 600px) {
+      header h1 {
+        font-size: 32px;
+      }
+
+      .content {
+        margin: 20px 10px;
+        padding: 15px;
+      }
+
+      .content p,
+      .content li {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -62,6 +119,7 @@
     <h1>Support Center</h1>
     <p>Need help? We're here to assist you.</p>
   </header>
+
   <div class="content">
     <h2>Common Issues</h2>
     <ul>
@@ -81,6 +139,7 @@
       </ul>
     </div>
   </div>
+
   <footer>
     &copy; 2025 MannCo Vault | For help, contact us anytime.
   </footer>
