--- a/support.html
+++ b/support.html
@@ -135,7 +135,7 @@
       <ul>
         <li>📧 Email: <a href="mailto:manncovault@gmail.com">manncovault@gmail.com</a></li>
         <li>💬 Steam: <a href="https://steamcommunity.com/id/ManncoVault/">Add the Owner</a></li>
-        <li>🌐 Discord: manccovault</li>
+        <li>🌐 Discord: manncovault</li>
       </ul>
     </div>
   </div>
