--- a/faq.html
+++ b/faq.html
@@ -111,6 +111,15 @@
     <p>Everything you need to know about selling TF2 keys</p>
   </header>
 
+  <nav style="background: rgba(51, 26, 26, 0.9); padding: 10px; text-align: center;">
+  <a href="index.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Home</a>
+  <a href="commands.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Commands</a>
+  <a href="pricing.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Pricing</a>
+  <a href="faq.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">FAQ</a>
+  <a href="support.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Support</a>
+</nav>
+
+
   <div class="container">
     <div class="faq">
       <h3>🕒 How fast will I receive my payment?</h3>
