--- a/support.html
+++ b/support.html
@@ -120,6 +120,15 @@
     <p>Need help? We're here to assist you.</p>
   </header>
 
+  <nav style="background: rgba(51, 26, 26, 0.9); padding: 10px; text-align: center;">
+  <a href="index.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Home</a>
+  <a href="commands.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Commands</a>
+  <a href="pricing.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Pricing</a>
+  <a href="faq.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">FAQ</a>
+  <a href="support.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Support</a>
+</nav>
+
+
   <div class="content">
     <h2>Common Issues</h2>
     <ul>
