--- a/pricing.html
+++ b/pricing.html
@@ -3,123 +3,127 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pricing - MannCo Vault</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
+  <title>Pricing | MannCo Vault</title>
+  <link rel="icon" href="favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
-      font-family: 'Bebas Neue', sans-serif;
-      background-color: #2c2c2c;
-      background-image: url('https://manncovaultbot.github.io/manncovault-site/tf2-background.png');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-      color: #fff;
+      font-family: 'Roboto', sans-serif;
+      background-color: #171a21;
+      color: #ccc;
     }
 
-    header {
-      background-color: rgba(66, 28, 28, 0.95);
-      padding: 30px 20px;
+    header, footer {
+      background-color: #1b2838;
+      padding: 20px;
       text-align: center;
-      border-bottom: 4px solid #d99c27;
+      border-bottom: 4px solid #66c0f4;
     }
 
     header h1 {
-      font-size: 42px;
+      color: #66c0f4;
       margin: 0;
-      color: #f0c040;
+      font-size: 32px;
       text-shadow: 2px 2px #000;
     }
 
-    header p {
-      font-size: 18px;
-      color: #ddd;
+    nav {
+      background-color: #171a21;
+      padding: 10px;
+      text-align: center;
     }
 
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 20px;
-      background: rgba(20, 20, 20, 0.85);
-      border-radius: 10px;
-      border: 2px solid #d99c27;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-    }
-
-    .pricing-table h2 {
-      color: #f0c040;
-      margin-top: 0;
-      font-size: 26px;
-    }
-
-    .pricing-table p {
-      font-size: 18px;
-      color: #ccc;
-      margin: 10px 0;
-      text-shadow: 1px 1px #000;
-    }
-
-    a {
-      color: #f0c040;
+    nav a {
+      color: #66c0f4;
+      margin: 0 15px;
       text-decoration: none;
+      font-weight: bold;
     }
 
-    a:hover {
-      text-decoration: underline;
+    nav a:hover {
+      color: #fff;
+    }
+
+    main {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    table {
+      width: 80%;
+      margin: 0 auto;
+      border-collapse: collapse;
+      background: rgba(255, 255, 255, 0.05);
+      color: #ccc;
+    }
+
+    th, td {
+      padding: 15px;
+      border: 1px solid #333;
+    }
+
+    th {
+      background-color: #66c0f4;
+      color: #111;
     }
 
     footer {
-      text-align: center;
-      padding: 20px;
-      background-color: rgba(34, 17, 17, 0.95);
-      font-size: 14px;
+      border-top: 4px solid #66c0f4;
       color: #aaa;
-      border-top: 4px solid #d99c27;
-    }
-
-    @media screen and (max-width: 600px) {
-      header h1 {
-        font-size: 32px;
-      }
-
-      .container {
-        margin: 20px 10px;
-        padding: 15px;
-      }
-
-      .pricing-table p {
-        font-size: 16px;
-      }
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>💲 Key Pricing</h1>
-    <p>Current rates for selling TF2 keys to MannCo Vault</p>
+    <h1>MannCo Vault - Pricing</h1>
   </header>
 
-  <nav style="background: rgba(51, 26, 26, 0.9); padding: 10px; text-align: center;">
-  <a href="index.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Home</a>
-  <a href="commands.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Commands</a>
-  <a href="pricing.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Pricing</a>
-  <a href="faq.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">FAQ</a>
-  <a href="support.html" style="color: #f0c040; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 18px; transition: color 0.2s;">Support</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="commands.html">Commands</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="faq.html">FAQ</a>
+    <a href="support.html">Support</a>
+  </nav>
 
-
-  <div class="container pricing-table">
-    <h2>Buying Price</h2>
-    <p><strong>1.84 USD</strong> per TF2 key via PayPal or BTC</p>
-    <p>💱 Live BTC rate shown on our <a href="index.html">Home</a> page</p>
-    <p>📌 Payments made within 1–3 minutes after trade confirmation</p>
-    <p>⚠️ Only Mann Co. Supply Crate Keys are accepted</p>
-  </div>
+  <main>
+    <h2>TF2 Key Buy Prices</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Buy Price (USD)</th>
+          <th>Buy Price (BTC)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mann Co. Supply Crate Key</td>
+          <td>$2.00</td>
+          <td id="btc-key">Loading...</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
 
   <footer>
-    &copy; 2025 MannCo Vault — Pricing subject to change based on market trends.
+    &copy; 2025 MannCo Vault | Not affiliated with Valve Corporation
   </footer>
+
+  <script>
+    async function fetchBTC() {
+      try {
+        const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+        const data = await res.json();
+        const btcRate = data.bitcoin.usd;
+        document.getElementById('btc-key').innerText = (2.00 / btcRate).toFixed(8) + " BTC";
+      } catch (e) {
+        document.getElementById('btc-key').innerText = "Unavailable";
+      }
+    }
+    fetchBTC();
+  </script>
 </body>
 </html>
